flowlog-build/tests/errors/typechecker/cast_cross_primitive.dl
.type Name   <: symbol
.type UserId <: number
.decl Customer(name: Name)
.decl OnlyUsers(u: UserId)
.input Customer(IO="file", filename="Customer.csv", delimiter=",")
.output OnlyUsers
OnlyUsers(as(name, UserId)) :- Customer(name).
